tests/fixtures/invalid/missing_button.seed
theme invalid {
  // Missing required button section
  card: {
    bg: "white"
    border: "gray.200"
    shadow: "sm"
  }

  typography: {
    heading: {
      size: "xl"
      weight: "bold"
      color: "gray.900"
    }
  }
}
